Changed file structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <title>TreeView</title>
-    <script type="text/javascript" src="content/angular.min.js"></script>
-    <script type="text/javascript" src="content/treeview.js"></script>
+    <title>TreeApp</title>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script type="text/javascript" src="tree.js"></script>
 </head>
 
 <body>
